fixing definition of steps witch given data. All such steps must include DataTable variable. All steps without it - must not include DataTable.